--- a/calibrations/right_cyberglove.yaml
+++ b/calibrations/right_cyberglove.yaml
@@ -1,47 +1,24 @@
-{"cyberglove_calibration":  [
-
-["G_PinkieRingAb", [[0.02,50.0],[0.55,0.0]]],
-
-["G_IndexDIJ", [[0.27,0.0],[0.88,90.0]]],
-
-["G_RingDIJ", [[0.29,0.0],[0.40,20.0]]],
-
-["G_ThumbMPJ", [[0.25,-30.0],[0.55,30.0]]],
-
-["G_RingMiddleAb", [[0.001,45.0],[0.602362215519,0.0]]],
-
-["G_PalmArch", [[0.4,0.0],[0.70,40.0]]],
-
-["G_PinkiePIJ", [[0.24,0.0],[0.70,90.0]]],
-
-["G_RingMPJ", [[0.326771646738,0.0],[0.57,90.0]]],
-
-["G_MiddlePIJ", [[0.27,0.0],[0.70,90.0]]],
-
-["G_MiddleDIJ", [[0.32,0.0],[0.59,90.0]]],
-
-["G_ThumbAb", [[0.791338562965,0.0],[0.47,50.0]]],
-
-["G_IndexMPJ", [[0.362204730511,0.0],[0.63,90.0]]],
-
-["G_PinkieDIJ", [[0.32,0.0],[0.99,90.0]]],
-
-["G_IndexPIJ", [[0.22,0.0],[0.649606287479,90.0]]],
-
-["G_ThumbRotate", [[0.10,-60.0],[0.40,60.0]]],
-
-["G_ThumbIJ", [[0.444881886244,0.0],[0.89,90.0]]],
-
-["G_MiddleIndexAb", [[0.02,50.0],[0.60,0.0]]],
-
-["G_RingPIJ", [[0.26,0.0],[0.73,160.0]]],
-
-["G_PinkieMPJ", [[0.354330718517,0.0],[0.606299221516,90.0]]],
-
-["G_WristPitch", [[0.60,-30.0], [0.66,0.0], [0.75,40.0]]],
-
-["G_WristYaw", [[0.33,10.0],[0.45,-30.0]]],
-
-["G_MiddleMPJ", [[0.24,0.0],[0.64,90.0]]],
-
+{'cyberglove_calibration': [
+['G_IndexDIJ', [[0.0, 0.0], [0.586614, 90.0]]],
+['G_IndexMPJ', [[0.358268, 0.0], [0.637795, 90.0]]],
+['G_IndexPIJ', [[0.19685, 0.0], [0.685039, 90.0]]],
+['G_MiddleDIJ', [[0.20047199999999998, 0.0], [0.3614959999999998, 90.0]]],
+['G_MiddleIndexAb', [[0.657795, 0.0], [0.3470869999999999, 50.0]]],
+['G_MiddleMPJ', [[0.358268, 0.0], [0.5466139999999999, 90.0]]],
+['G_MiddlePIJ', [[0.232283, 0.0], [0.586614, 90.0]]],
+['G_PalmArch', [[0.0, 0.0], [0.02, 40.0]]],
+['G_PinkieDIJ', [[0.0, 0.0], [1.0, 90.0]]],
+['G_PinkieMPJ', [[0.377953, 0.0], [0.677165, 90.0]]],
+['G_PinkiePIJ', [[0.200787, 0.0], [0.724409, 90.0]]],
+['G_PinkieRingAb', [[0.453071, 0.0], [0.050865999999999995, 50.0]]],
+['G_RingDIJ', [[0.200787, 0.0], [0.50874, 90.0]]],
+['G_RingMPJ', [[0.350394, 0.0], [0.46716500000000005, 90.0]]],
+['G_RingMiddleAb', [[0.4726769999999999, 0.0], [0.17708699999999988, 50.0]]],
+['G_RingPIJ', [[0.259843, 0.0], [0.637795, 90.0]]],
+['G_ThumbAb', [[0.751969, 0.0], [0.291339, 50.0]]],
+['G_ThumbIJ', [[0.407087, 0.0], [0.6669290000000001, 90.0]]],
+['G_ThumbMPJ', [[0.333071, -30.0], [0.471811, 30.0]]],
+['G_ThumbRotate', [[0.0, -60.0], [0.6224410000000001, 60.0]]],
+['G_WristPitch', [[0.346457, -30.0], [0.724409, 40.0]]],
+['G_WristYaw', [[0.31401599999999996, -30.0], [0.18653499999999998, 10.0]]],
 ]}
