--- a/calibrations/right_cyberglove.yaml
+++ b/calibrations/right_cyberglove.yaml
@@ -1,24 +1,24 @@
 {'cyberglove_calibration': [
-['G_IndexDIJ', [[0.0, 0.0], [0.586614, 90.0]]],
-['G_IndexMPJ', [[0.358268, 0.0], [0.637795, 90.0]]],
-['G_IndexPIJ', [[0.19685, 0.0], [0.685039, 90.0]]],
-['G_MiddleDIJ', [[0.20047199999999998, 0.0], [0.3614959999999998, 90.0]]],
-['G_MiddleIndexAb', [[0.657795, 0.0], [0.3470869999999999, 50.0]]],
-['G_MiddleMPJ', [[0.358268, 0.0], [0.5466139999999999, 90.0]]],
-['G_MiddlePIJ', [[0.232283, 0.0], [0.586614, 90.0]]],
-['G_PalmArch', [[0.0, 0.0], [0.02, 40.0]]],
-['G_PinkieDIJ', [[0.0, 0.0], [1.0, 90.0]]],
-['G_PinkieMPJ', [[0.377953, 0.0], [0.677165, 90.0]]],
-['G_PinkiePIJ', [[0.200787, 0.0], [0.724409, 90.0]]],
-['G_PinkieRingAb', [[0.453071, 0.0], [0.050865999999999995, 50.0]]],
-['G_RingDIJ', [[0.200787, 0.0], [0.50874, 90.0]]],
-['G_RingMPJ', [[0.350394, 0.0], [0.46716500000000005, 90.0]]],
-['G_RingMiddleAb', [[0.4726769999999999, 0.0], [0.17708699999999988, 50.0]]],
-['G_RingPIJ', [[0.259843, 0.0], [0.637795, 90.0]]],
-['G_ThumbAb', [[0.751969, 0.0], [0.291339, 50.0]]],
-['G_ThumbIJ', [[0.407087, 0.0], [0.6669290000000001, 90.0]]],
-['G_ThumbMPJ', [[0.333071, -30.0], [0.471811, 30.0]]],
-['G_ThumbRotate', [[0.0, -60.0], [0.6224410000000001, 60.0]]],
-['G_WristPitch', [[0.346457, -30.0], [0.724409, 40.0]]],
-['G_WristYaw', [[0.31401599999999996, -30.0], [0.18653499999999998, 10.0]]],
+['G_IndexDIJ', [[0.01, 0.0], [0.34598399999999996, 90.0]]],
+['G_IndexMPJ', [[0.395591, 0.0], [0.5109209999999998, 90.0]]],
+['G_IndexPIJ', [[0.27748000000000006, 0.0], [0.6292909999999999, 90.0]]],
+['G_MiddleDIJ', [[0.214409, 0.0], [0.336693, 90.0]]],
+['G_MiddleIndexAb', [[0.613543, 0.0], [0.3087400000000001, 50.0]]],
+['G_MiddleMPJ', [[0.36378, 0.0], [0.4974799999999999, 90.0]]],
+['G_MiddlePIJ', [[0.26259800000000005, 0.0], [0.464488, 90.0]]],
+['G_PalmArch', [[0.0, 0.0], [0.001, 40.0]]],
+['G_PinkieDIJ', [[0.999, 0.0], [1.0, 90.0]]],
+['G_PinkieMPJ', [[0.401339, 0.0], [0.629921, 90.0]]],
+['G_PinkiePIJ', [[0.35653500000000005, 0.0], [0.694724, 90.0]]],
+['G_PinkieRingAb', [[0.37126, 0.0], [0.287402, 50.0]]],
+['G_RingDIJ', [[0.24666100000000005, 0.0], [0.48692899999999995, 90.0]]],
+['G_RingMPJ', [[0.38165400000000005, 0.0], [0.515354, 90.0]]],
+['G_RingMiddleAb', [[0.3703149999999999, 0.0], [0.211575, 50.0]]],
+['G_RingPIJ', [[0.31015700000000007, 0.0], [0.46173200000000003, 90.0]]],
+['G_ThumbAb', [[0.492835, 0.0], [0.33393700000000004, 50.0]]],
+['G_ThumbIJ', [[0.3888980000000001, 0.0], [0.566929, 90.0]]],
+['G_ThumbMPJ', [[0.413386, -30.0], [0.474252, 30.0]]],
+['G_ThumbRotate', [[0.098, -60.0], [0.49429999999999996, 60.0]]],
+['G_WristPitch', [[0.241969, -30.0], [0.6647240000000001, 40.0]]],
+['G_WristYaw', [[0.31220499999999995, -30.0], [0.19952799999999993, 10.0]]],
 ]}
