--- a/calibrations/right_cyberglove.yaml
+++ b/calibrations/right_cyberglove.yaml
@@ -1,24 +1,24 @@
 {'cyberglove_calibration': [
-['G_IndexDIJ', [[0.0, 0.0], [0.586614, 90.0]]],
-['G_IndexMPJ', [[0.358268, 0.0], [0.637795, 90.0]]],
-['G_IndexPIJ', [[0.19685, 0.0], [0.685039, 90.0]]],
-['G_MiddleDIJ', [[0.20047199999999998, 0.0], [0.3614959999999998, 90.0]]],
-['G_MiddleIndexAb', [[0.657795, 0.0], [0.3470869999999999, 50.0]]],
-['G_MiddleMPJ', [[0.358268, 0.0], [0.5466139999999999, 90.0]]],
-['G_MiddlePIJ', [[0.232283, 0.0], [0.586614, 90.0]]],
-['G_PalmArch', [[0.0, 0.0], [0.02, 40.0]]],
-['G_PinkieDIJ', [[0.0, 0.0], [1.0, 90.0]]],
-['G_PinkieMPJ', [[0.377953, 0.0], [0.677165, 90.0]]],
-['G_PinkiePIJ', [[0.200787, 0.0], [0.724409, 90.0]]],
-['G_PinkieRingAb', [[0.453071, 0.0], [0.050865999999999995, 50.0]]],
-['G_RingDIJ', [[0.200787, 0.0], [0.50874, 90.0]]],
-['G_RingMPJ', [[0.350394, 0.0], [0.46716500000000005, 90.0]]],
-['G_RingMiddleAb', [[0.4726769999999999, 0.0], [0.17708699999999988, 50.0]]],
-['G_RingPIJ', [[0.259843, 0.0], [0.637795, 90.0]]],
-['G_ThumbAb', [[0.751969, 0.0], [0.291339, 50.0]]],
-['G_ThumbIJ', [[0.407087, 0.0], [0.6669290000000001, 90.0]]],
-['G_ThumbMPJ', [[0.333071, -30.0], [0.471811, 30.0]]],
-['G_ThumbRotate', [[0.0, -60.0], [0.6224410000000001, 60.0]]],
-['G_WristPitch', [[0.346457, -30.0], [0.724409, 40.0]]],
-['G_WristYaw', [[0.31401599999999996, -30.0], [0.18653499999999998, 10.0]]],
+['G_IndexDIJ', [[0.137795, 0.0], [0.38189, 90.0]]],
+['G_IndexMPJ', [[0.354331, 0.0], [0.7529129999999999, 90.0]]],
+['G_IndexPIJ', [[0.141732, 0.0], [0.692913, 90.0]]],
+['G_MiddleDIJ', [[0.011811, 0.0], [0.472441, 90.0]]],
+['G_MiddleIndexAb', [[0.476378, 0.0], [0.110236, 50.0]]],
+['G_MiddleMPJ', [[0.374016, 0.0], [0.704724, 90.0]]],
+['G_MiddlePIJ', [[0.208661, 0.0], [0.65748, 90.0]]],
+['G_PalmArch', [[0.16787400000000002, 0.0], [0.4276380000000001, 40.0]]],
+['G_PinkieDIJ', [[0.999, 0.0], [1.0, 90.0]]],
+['G_PinkieMPJ', [[0.377953, 0.0], [0.645669, 90.0]]],
+['G_PinkiePIJ', [[0.122047, 0.0], [0.527559, 90.0]]],
+['G_PinkieRingAb', [[1.0, 0.0], [0.610236, 50.0]]],
+['G_RingDIJ', [[0.129921, 0.0], [0.377953, 90.0]]],
+['G_RingMPJ', [[0.322835, 0.0], [0.6038580000000001, 90.0]]],
+['G_RingMiddleAb', [[0.53189, 0.0], [-0.03464600000000001, 50.0]]],
+['G_RingPIJ', [[0.228346, 0.0], [0.625984, 90.0]]],
+['G_ThumbAb', [[0.598425, 0.0], [0.295276, 50.0]]],
+['G_ThumbIJ', [[0.45189, 0.0], [0.91811, 90.0]]],
+['G_ThumbMPJ', [[0.307087, -30.0], [0.5316540000000001, 30.0]]],
+['G_ThumbRotate', [[0.3888349999999998, -60.0], [0.4859059999999997, 60.0]]],
+['G_WristPitch', [[0.30000000000000004, -30.0], [0.629528, 40.0]]],
+['G_WristYaw', [[0.685039, -30.0], [0.173228, 10.0]]],
 ]}
