--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <package>
-  <name>sr_cyberglove</name>
+  <name>sr_cyberglove_config</name>
   <version>1.4.0</version>
   <description>sr_cyberglove contains configuration files for the cyberglove (calibration, mapping) for the Shadow Robot hand</description>
   <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
@@ -8,8 +8,8 @@
 
   <url type="website">http://ros.org/wiki/sr_cyberglove_config</url>
   <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
-  <url type="repository">https://github.com/shadow-robot/sr-cyberglove</url>
-  <url type="bugtracker">https://github.com/shadow-robot/sr-cyberglove/issues</url>
+  <url type="repository">https://github.com/shadow-robot/sr-cyberglove-config</url>
+  <url type="bugtracker">https://github.com/shadow-robot/sr-cyberglove-config/issues</url>
 
   <author>Ugo Cupcic</author>
   <author>Toni Oliver</author>
