Tom initial calibration

--- a/calibrations/right_cyberglove.yaml
+++ b/calibrations/right_cyberglove.yaml
@@ -1,47 +1,24 @@
-{"cyberglove_calibration":  [
-
-["G_PinkieRingAb", [[0.02,50.0],[0.55,0.0]]],
-
-["G_IndexDIJ", [[0.27,0.0],[0.88,90.0]]],
-
-["G_RingDIJ", [[0.29,0.0],[0.40,20.0]]],
-
-["G_ThumbMPJ", [[0.25,-30.0],[0.55,30.0]]],
-
-["G_RingMiddleAb", [[0.001,45.0],[0.602362215519,0.0]]],
-
-["G_PalmArch", [[0.4,0.0],[0.70,40.0]]],
-
-["G_PinkiePIJ", [[0.24,0.0],[0.70,90.0]]],
-
-["G_RingMPJ", [[0.326771646738,0.0],[0.57,90.0]]],
-
-["G_MiddlePIJ", [[0.27,0.0],[0.70,90.0]]],
-
-["G_MiddleDIJ", [[0.32,0.0],[0.59,90.0]]],
-
-["G_ThumbAb", [[0.791338562965,0.0],[0.47,50.0]]],
-
-["G_IndexMPJ", [[0.362204730511,0.0],[0.63,90.0]]],
-
-["G_PinkieDIJ", [[0.32,0.0],[0.99,90.0]]],
-
-["G_IndexPIJ", [[0.22,0.0],[0.649606287479,90.0]]],
-
-["G_ThumbRotate", [[0.10,-60.0],[0.40,60.0]]],
-
-["G_ThumbIJ", [[0.444881886244,0.0],[0.89,90.0]]],
-
-["G_MiddleIndexAb", [[0.02,50.0],[0.60,0.0]]],
-
-["G_RingPIJ", [[0.26,0.0],[0.73,160.0]]],
-
-["G_PinkieMPJ", [[0.354330718517,0.0],[0.606299221516,90.0]]],
-
-["G_WristPitch", [[0.60,-30.0], [0.66,0.0], [0.75,40.0]]],
-
-["G_WristYaw", [[0.33,10.0],[0.45,-30.0]]],
-
-["G_MiddleMPJ", [[0.24,0.0],[0.64,90.0]]],
-
+{'cyberglove_calibration': [
+['G_PinkieRingAb', [[0.090551,50.000000],[0.322835,0.000000]]],
+['G_IndexDIJ', [[-0.001000,0.000000],[0.000000,90.000000]]],
+['G_RingDIJ', [[0.188976,0.000000],[0.472441,90.000000]]],
+['G_ThumbMPJ', [[0.440945,-30.000000],[0.480315,30.000000]]],
+['G_RingMiddleAb', [[0.251969,50.000000],[0.401575,0.000000]]],
+['G_PalmArch', [[-0.001000,0.000000],[0.000000,40.000000]]],
+['G_PinkiePIJ', [[0.161417,0.000000],[0.692913,90.000000]]],
+['G_RingMPJ', [[0.334646,0.000000],[0.629921,90.000000]]],
+['G_MiddlePIJ', [[0.212598,0.000000],[0.539370,90.000000]]],
+['G_MiddleDIJ', [[0.212598,0.000000],[0.220472,90.000000]]],
+['G_ThumbAb', [[0.181102,0.000000],[0.578740,50.000000]]],
+['G_IndexMPJ', [[0.307087,0.000000],[0.586614,90.000000]]],
+['G_PinkieDIJ', [[0.999000,0.000000],[1.000000,90.000000]]],
+['G_IndexPIJ', [[0.133858,0.000000],[0.622047,90.000000]]],
+['G_ThumbRotate', [[0.000000,-60.000000],[0.279528,60.000000]]],
+['G_ThumbIJ', [[0.425197,0.000000],[0.594488,90.000000]]],
+['G_MiddleIndexAb', [[0.448819,50.000000],[0.594488,0.000000]]],
+['G_RingPIJ', [[0.177165,0.000000],[0.590551,90.000000]]],
+['G_PinkieMPJ', [[0.354331,0.000000],[0.586614,90.000000]]],
+['G_WristPitch', [[0.267717,-30.000000],[0.700787,40.000000]]],
+['G_WristYaw', [[0.232283,-30.000000],[0.385827,10.000000]]],
+['G_MiddleMPJ', [[0.271654,0.000000],[0.551181,90.000000]]],
 ]}
